# poker-ai-web

./: .cursorignore  .cursorrules  .gitignore  AMOUNT_FORMAT_INTEGRATION.md  ISSUE_37_SUMMARY.md  ISSUE_38_SUMMARY.md  ISSUE_41_COMPLETION_SUMMARY.md  ISSUE_45_COMPLETION_SUMMARY.md  ISSUE_46_COMPLETION_SUMMARY.md  ISSUE_46_IMPLEMENTATION.md  ISSUE_47_COMPLETION_SUMMARY.md  ISSUE_48_COMPLETION_SUMMARY.md  ISSUE_49_COMPLETION_SUMMARY.md  ISSUE_65_STATUS.md  LICENSE  README.md  REPLAYER_CONTROLS_IMPLEMENTATION.md  REPLAYER_MANUAL_TESTING.md  REPLAYER_TEST_SPECS.md  RUST_SETUP.md  TYPECHECK_FIX_SUMMARY.md
.cursor/: active_task.md
.cursor/workflows/: batch-issues-workflow.md  bug-workflow.md  create-bug-workflow.md  feature-workflow.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/docs/: labels-convention.md  project_labels.json  windows-utf8-setup.md
.github/scripts/: Enable-Utf8.ps1  New-BatchIssues.ps1  Sync-ProjectLabels.ps1  Test-IssueUTF8.ps1
.github/workflows/: CI_IMPLEMENTATION.md  README.md  api-ci.yml  backend-ci.yml  ci-rust.yml  ci.yml  fast-checks.yml  frontend-ci.yml  full-ci.yml  release-package.yml  release.yml
backend/: CHECKLIST.md  Cargo.toml  README.md
backend/.cargo/: config.toml
backend/db/: Cargo.toml
backend/db/examples/: benchmark_10m.rs  generate_and_persist.rs
backend/db/sql/: schema.sql
backend/db/src/: connection.rs  inmemory.rs  lib.rs  memory_monitor.rs  parquet_loader.rs  parquet_reader.rs  parquet_writer.rs  schema.rs
backend/db/tests/: integration_tests.rs
backend/ffi/: Cargo.toml  pyproject.toml
backend/ffi/src/: lib.rs
backend/math/: Cargo.toml
backend/math/benches/: evaluator_benchmark.rs
backend/math/src/: lib.rs
backend/math/src/equity_calculator/: mod.rs  monte_carlo.rs  simd.rs
backend/math/src/hand_evaluator/: cards.rs  evaluator.rs  hand_rank.rs  lookup.rs  lookup_7cards.rs  mod.rs
backend/parsers/: Cargo.toml  FILE_WATCHER.md
backend/parsers/benches/: parser_benchmark.rs
backend/parsers/examples/: file_watcher_demo.rs  file_watcher_simple.rs  generate_synthetic.rs  parse_real_file.rs
backend/parsers/src/: bytes_parser.rs  file_reader.rs  file_watcher.rs  fsm.rs  lib.rs  logging.rs  parallel_processor.rs  synthetic_generator.rs  types.rs
backend/ranges/: Cargo.toml
backend/ranges/src/: lib.rs
docs/: active_context.md
docs/project/: active-context.md  architecture.md  ci-optimization.md  frontend-architecture.md  project-brief.md  roadmap.md  ui-foundations.md
docs/ranges/: preflop-ranges.md
docs/specs/: api-spec.md  db-schema.md  ffi-contract.md  logging-spec.md  performance-benchmark.md  poker-logc.md  poker-logic.md  range-spec.md  security.md  sys-ops.md  ux-spec.md
docs/winamax/: example_winamax.txt  winamax-spec.md
frontend/: API_CLIENT_README.md  README.md  ROUTING_LAYOUT_README.md  TAILWIND_PALETTE.md  WEBSOCKET_HOOK_README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  routes.tsx
frontend/src/__tests__/: useReplayerState.test.ts
frontend/src/components/: Badge.tsx  Button.tsx  Card.tsx  ColorPaletteReference.tsx  Input.tsx  Modal.tsx  Navbar.tsx  README.md  Sidebar.tsx  index.ts
frontend/src/features/dashboard/: index.ts
frontend/src/features/dashboard/components/: DashboardHeader.tsx  HandsList.tsx  HandsListFilters.tsx  ProfitChart.tsx  StatCard.tsx  index.ts
frontend/src/features/replayer/: index.ts
frontend/src/features/replayer/components/: AmountFormatToggle.tsx  AnimatedCard.tsx  Card.tsx  PlayerSeat.tsx  PokerTable.tsx  README.md  ReplayerControls.tsx  ReplayerTimeline.tsx  index.ts
frontend/src/features/stats/: index.ts
frontend/src/features/stats/components/: README.md  RangeMatrix.tsx  RangePresets.tsx  index.ts
frontend/src/features/stats/utils/: rangeUtils.ts
frontend/src/hooks/: index.ts  useAmountFormat.ts  useEquityCalculation.ts  useHand.ts  usePlayerStats.ts  useProfitHistory.ts  useRecentHands.ts  useReplayerState.ts  useWebSocket.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/lib/: index.ts  query-client.ts
frontend/src/lib/canvas/: cards.ts  constants.ts  geometry.ts  index.ts  types.ts
frontend/src/pages/: ApiClientDemo.tsx  ComponentShowcase.tsx  Dashboard.tsx  HandReplayer.tsx  NotFound.tsx  Sessions.tsx  Settings.tsx  Stats.tsx
frontend/src/styles/: variables.css
frontend/src/types/: api.ts  index.ts  poker.ts  ranges.ts
frontend/src/utils/: api-client.ts  formatters.ts  index.ts
packaging/: .gitignore  README.md  build-ffi.ps1  build-frontend.ps1  build-launcher.ps1  build-rust.ps1  config.template.toml  create-zip.ps1  package-windows.ps1
packaging/launcher/: Cargo.toml
packaging/launcher/src/: main.rs
scripts/: verify-tailwind.sh
server-api/: .env.example  API_README.md  README.md  WEBSOCKET_README.md  build.ps1  pyproject.toml  run.ps1
server-api/app/: __init__.py  main.py
server-api/app/bridge/: __init__.py  poker_ffi.pyi
server-api/app/config/: __init__.py  settings.py
server-api/app/middleware/: __init__.py  audit.py  security.py
server-api/app/models/: __init__.py  equity.py  hands.py  stats.py  websocket.py
server-api/app/routes/: __init__.py  equity.py  hands.py  stats.py  websocket.py
server-api/app/services/: __init__.py  file_watcher_service.py  websocket_manager.py
server-api/app/utils/: __init__.py  logger.py
server-api/scripts/: test_ffi_example.py  test_websocket_client.py  verify_security.ps1  verify_security.sh
server-api/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_audit_middleware.py  test_ffi_integration.py  test_health.py  test_logging.py  test_security.py  test_websocket_integration.py
