[project]
name = "poker-api"
version = "0.1.0"
description = "FastAPI server for Winamax Poker Analyzer"
authors = [
    {name = "Miguel Zaragoza"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "duckdb>=0.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.8",
]
build = [
    "maturin>=1.4.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "app" }]

# Poetry groups for dependency management
[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3"
pytest-asyncio = ">=0.21.1"
pytest-cov = ">=4.1.0"
httpx = ">=0.25.0"
black = ">=23.12.0"
mypy = ">=1.7.0"
ruff = ">=0.1.8"

[tool.poetry.group.build.dependencies]
maturin = ">=1.4.0"
