[package]
name = "poker-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duckdb = { workspace = true, features = ["bundled"] }
arrow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Parquet para persistencia
parquet = "48.0"

# Async runtime
tokio = { workspace = true }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Timestamp handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"

