[package]
name = "poker-parsers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rayon = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Crate-specific dependencies
regex = "1.10"
nom = "7.1"
chrono = { workspace = true, features = ["serde"] }
md5 = "0.7"

# Synthetic generator dependencies
rand = "0.8"
rand_chacha = "0.3"
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser_benchmark"
harness = false

