[package]
name = "poker-ranges"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

# Parsing de HandRangeDSL
nom = "7.1"
regex = "1.10"

# YAML frontmatter parsing
yaml-front-matter = "0.1"

[dev-dependencies]
tempfile = "3.8"

